LendingApp_Challenge/force-app/main/default/objects/LogInfo__c/LogInfo__c.object-meta.xml
<CustomObject>
    <label>LogInfo</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>LogInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LogInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>