LendingApp_Challenge/force-app/main/default/objects/LogInfo__c/fields/HttpRequest__c.field-meta.xml
<CustomField>
    <fullName>HttpRequest__c</fullName>
    <label>HttpRequest</label>
    <type>TextArea</type>
</CustomField>