LendingApp_Challenge/force-app/main/default/objects/LogInfo__c/fields/HttpResponse__c.field-meta.xml
<CustomField>
    <fullName>HttpResponse__c</fullName>
    <label>HttpResponse</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>