LendingApp_Challenge/force-app/main/default/objects/LogInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Log_Type__c</columns>
    <columns>HttpRequest__c</columns>
    <columns>HttpResponse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>